# emg-miniprogram

./: .env.deploy.example  .gitignore  Caddyfile  ESP32S3_P4_Arduino_WiFi_微信小程序传输方案(1).md  docker-compose.yml  index.html  package.json  小程序前端.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  deps.py  main.py  models.py  requirements.txt  test_api.py
backend/routers/: ai.py  auth.py  devices.py  forum.py  health.py  upload.py  web.py
docs/: aliyun-deploy.md
esp32/arduino_wifi_bridge/: README.md
src/api/: ai.ts  errors.ts  forum.ts  health.ts  training.ts
src/layouts/: AdminLayout.vue
src/router/: index.ts
src/stores/: auth.ts
src/utils/: request.ts
src/views/: ComputeView.vue  DevicesView.vue  ErrorsView.vue  ForumView.vue  KnowledgeView.vue  LoginView.vue  ReportsView.vue
stageK1_final_delivery(1)/: 00_COMPETITION_START_HERE.md  00_START_HERE.txt  COMPETITION_STATUS.json  FILE_MANIFEST.csv  FINAL_STATUS.json  NETWORK_TEST_CORRECTION.md  PACKAGE_FILES.sha256  RESULT_RETURN.txt  RESULT_RETURN_TEMPLATE.md  RUNBOOK_3H.md  STAGEI_EVIDENCE_BASIS.md  STAGEI_OFFLINE_STATUS.json  STAGEK1_DUO_COMMANDS.md  STAGEK1_STATUS.json  VERSION.json  run_board_replay.sh
stageK1_final_delivery(1)/board/: probe_stagei_platform.py  run_stagei_pty_selftest.sh  (+1 more)
stageK1_final_delivery(1)/duo_s_full_chain/native/: CMakeLists.txt  emg_features.c  emg_features.h  emg_features_board.c
web/: Dockerfile  package-lock.json  vite.config.ts
web/src/: main.ts  (+1 more)
weixin/: app.js  app.json  app.wxss  project.config.json
(+168 files in other folders)
